--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="_19">$19</string>
     <string name="firstname">Firstname</string>
     <string name="_31_12_1970_3_30_pm">31/12/1970 3:30 PM</string>
+    <string name="speed">Speed</string>
 
 </resources>
